[package]
authors = ['Substrate DevHub <https://github.com/phuquocdog>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://phuquoc.dog'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/phuquocdog/node/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support = {default-features = false,  git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = {default-features = false,  git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[dev-dependencies]
serde = '1.0.119'
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
