[package]
authors = ['Substrate DevHub <https://github.com/phuquocdog>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://phuquoc.dog'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/phuquocdog/node/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.3.1'}
# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}
frame-support = {default-features = false,  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}
frame-system = {default-features = false,  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}

[dev-dependencies]
serde = '1.0.119'
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
