[package]
name = "pallet-posts-runtime-api"
version = "4.0.0-dev"
description = "Runtime API definition for the posts pallet"
authors = ["<Thien Tran fcduythien@gmail.com>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }

sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-support = { default-features = false, path = '../../../support' }
pallet-posts = { default-features = false, path = '../../../posts' }


[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std",
	"pallet-posts/std",
	"pallet-support/std"
]

